[gd_scene load_steps=4 format=2]

[ext_resource path="res://Camera_Effects/Camera2D.gd" type="Script" id=1]
[ext_resource path="res://Camera_Effects/Effects/ScreenShake.tscn" type="PackedScene" id=2]
[ext_resource path="res://Camera_Effects/Effects/SlowTime.tscn" type="PackedScene" id=3]

[node name="Camera2D" type="Camera2D"]
pause_mode = 2
position = Vector2( 320, 180 )
current = true
smoothing_speed = 10.0
script = ExtResource( 1 )

[node name="Limits" type="Node" parent="."]

[node name="TopLeft" type="Position2D" parent="Limits"]
position = Vector2( 0, 1.52588e-05 )

[node name="BottomRight" type="Position2D" parent="Limits"]
position = Vector2( 640, 360 )

[node name="ScreenShake" parent="." instance=ExtResource( 2 )]

[node name="SlowTime" parent="." instance=ExtResource( 3 )]

[node name="WaitTimer" type="Timer" parent="."]

[node name="Tween" type="Tween" parent="."]
